# web_modul_10

./: db.sqlite3  manage.py  pyproject.toml
m10/: asgi.py  db.sqlite3  pyproject.toml  settings.py  urls.py
m10/m10/: settings.py  urls.py  wsgi.py
m10/quote_site/: admin.py  forms.py  models.py  urls.py  views.py
m10/quote_site/migrations/: 0002_remove_tag_caption_tag_name_alter_author_fullname.py  0003_alter_quote_tags.py  0004_rename_borndate_author_born_date_alter_quote_tags.py
m10/quote_site/static/quote_site/: style.css
m10/quote_site/templates/quote_site/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
m10/quote_site/templates/quote_site/includes/: quote.html  top_tags.html
m10/seeds/: get_data_from_json.py  soup.py
m10/users/: forms.py  urls.py  views.py
m10/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
quote_site/: apps.py  models.py  views.py
quote_site/migrations/: 0001_initial.py
quote_site/static/quote_site/: style.css
quote_site/templates/quote_site/: base.html  index.html
