[tool.poetry]
name = "modul-10"
version = "0.1.0"
description = ""
authors = ["ortursucceeh <109922331+ortursucceeh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "modul_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"
beautifulsoup4 = "^4.11.2"
sqlalchemy = "^2.0.2"
requests = "^2.28.2"
django-environ = "^0.10.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]                      
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
